--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -79,3 +79,8 @@ footer label {
 .marginright10px {
     margin-right: 10px;
 }
+
+.SuccessfulSignUp {
+    font-size: 20px;
+    font-weight: bold;
+}
