--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <link href="/static/css/style.css" rel="stylesheet">-->
-<!--    <link href="/static/css/input.css" rel="stylesheet">-->
-<!--    <link th:href="@{/css/style.css}" rel="stylesheet" />-->
-<!--    <link th:href="@{/css/input.css}" rel="stylesheet" />-->
+    <!--    <link href="/static/css/style.css" rel="stylesheet">-->
+    <!--    <link href="/static/css/input.css" rel="stylesheet">-->
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/input.css}"/>
 </head>
 <body class="container">
 <dev id="heading" class="container borderradius10px">
