--- a/src/main/resources/templates/signup-teacher.html
+++ b/src/main/resources/templates/signup-teacher.html
@@ -6,91 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link th:href="@{/css/style.css}" rel="stylesheet" />
-    <link th:href="@{/css/input.css}" rel="stylesheet" />
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/input.css}"/>
 </head>
 
 <body class="container">
-    <dev id="heading" class="container borderradius10px">
-        <dev id="loginbuttonDiv" class="container">
-            <a href="/sign-up" class="marginleft10px"><button type="submit" class="btn ">Sign-Up</button></a>
-            <a href="/login" class="marginleft10px"><button type="submit" class="btn">Login</button></a>
-        </dev>
-        <dev id="homebuttonDiv" class="container">
-            <a href="/home" class="marginright10px"><button type="submit" class="btn btn-submit">home</button></a>
-        </dev>
+<dev class="container borderradius10px" id="heading">
+    <dev class="container" id="loginbuttonDiv">
+        <a class="marginleft10px" href="/sign-up">
+            <button class="btn " type="submit">Sign-Up</button>
+        </a>
+        <a class="marginleft10px" href="/login">
+            <button class="btn" type="submit">Login</button>
+        </a>
     </dev>
-
-
-
-
-    <dev id="mainDiv" class="container borderradius10px ">
-
-        <div class="wrapper">
-            <form class="form" th:action="@{/signup-teacher}" th:object="${teacher}" method="post">
-                <h1 class="formh1">Sign-Up As Teacher</h1>
-                <hr class="formhrsep"/>
-                <div class="group">
-                    <input class="input" id="firstName" required="required" th:field="*{firstName}" type="text"/><span
-                        class="highlight"></span><span class="bar"></span>
-                    <label class="label">First Name</label>
-                    <p th:each="error : ${#fields.errors('firstName')}"
-                       th:text="${error}">Validation error</p>
-                </div>
-                <div class="group">
-                    <input class="input" id="lastName" required="required" th:field="*{lastName}" type="text"/><span
-                        class="highlight"></span><span class="bar"></span>
-                    <label class="label">Last Name</label>
-                    <p th:each="error : ${#fields.errors('lastName')}"
-                       th:text="${error}">Validation error</p>
-                </div>
-                <div class="group">
-                    <input type="text" th:field="*{username}" id="username" class="input" required="required"/><span
-                        class="highlight"></span><span class="bar"></span>
-                    <label class="label">Username</label>
-                </div>
-                <p th:each="error : ${#fields.errors('username')}"
-                   th:text="${error}">Validation error</p>
-                <div class="group">
-                    <input type="text" th:field="*{email}" id="email" class="input" required="required"/><span
-                        class="highlight"></span><span class="bar"></span>
-                    <label class="label">Email</label>
-                </div>
-                <p th:each="error : ${#fields.errors('email')}"
-                   th:text="${error}">Validation error</p>
-                <div class="group">
-                    <input type="tel" th:field="*{phoneNumber}" id="phoneNumber" class="input"
-                           required="required"/><span class="highlight"></span><span class="bar"></span>
-                    <label class="label">Number</label>
-                </div>
-                <p th:each="error : ${#fields.errors('phoneNumber')}"
-                   th:text="${error}">Validation error</p>
-                <div class="group">
-                    <input type="password" th:field="*{password}" id="password" class="input" required="required"/><span
-                        class="highlight"></span><span
-                        class="bar"></span>
-                    <label class="label">Password</label>
-                </div>
-                <p th:each="error : ${#fields.errors('password')}"
-                   th:text="${error}">Validation error</p>
-                <div class="group">
-                    <input type="password" id="password2" class="input" required="required"/><span
-                        class="highlight"></span><span
-                        class="bar"></span>
-                    <label class="label">Confirm Password</label>
-                </div>
-                <!--                <p th:each="error : ${#fields.errors('password2')}"-->
-                <!--                   th:text="${error}">Validation error</p>-->
-                <div class="btn-box">
-                    <button class="btn btn-submit" type="submit">submit</button>
-                </div>
-            </form>
-        </div>
+    <dev class="container" id="homebuttonDiv">
+        <a class="marginright10px" href="/home">
+            <button class="btn btn-submit" type="submit">home</button>
+        </a>
     </dev>
+</dev>
 
-    <footer class="container borderradius10px">
-<!--        <span>©Airpicket</span>-->
-    </footer>
+
+<dev class="container borderradius10px " id="mainDiv">
+
+    <div class="wrapper">
+        <form class="form" method="post" th:action="@{/signup-teacher}" th:object="${teacher}">
+            <h1 class="formh1">Sign-Up As Teacher</h1>
+            <hr class="formhrsep"/>
+            <div class="group">
+                <input class="input" id="firstName" required="required" th:field="*{firstName}" type="text"/><span
+                    class="highlight"></span><span class="bar"></span>
+                <label class="label">First Name</label>
+                <p th:each="error : ${#fields.errors('firstName')}"
+                   th:text="${error}">Validation error</p>
+            </div>
+            <div class="group">
+                <input class="input" id="lastName" required="required" th:field="*{lastName}" type="text"/><span
+                    class="highlight"></span><span class="bar"></span>
+                <label class="label">Last Name</label>
+                <p th:each="error : ${#fields.errors('lastName')}"
+                   th:text="${error}">Validation error</p>
+            </div>
+            <div class="group">
+                <input class="input" id="username" required="required" th:field="*{username}" type="text"/><span
+                    class="highlight"></span><span class="bar"></span>
+                <label class="label">Username</label>
+            </div>
+            <p th:each="error : ${#fields.errors('username')}"
+               th:text="${error}">Validation error</p>
+            <div class="group">
+                <input class="input" id="email" required="required" th:field="*{email}" type="text"/><span
+                    class="highlight"></span><span class="bar"></span>
+                <label class="label">Email</label>
+            </div>
+            <p th:each="error : ${#fields.errors('email')}"
+               th:text="${error}">Validation error</p>
+            <div class="group">
+                <input class="input" id="phoneNumber" required="required" th:field="*{phoneNumber}"
+                       type="tel"/><span class="highlight"></span><span class="bar"></span>
+                <label class="label">Number</label>
+            </div>
+            <p th:each="error : ${#fields.errors('phoneNumber')}"
+               th:text="${error}">Validation error</p>
+            <div class="group">
+                <input class="input" id="password" required="required" th:field="*{password}" type="password"/><span
+                    class="highlight"></span><span
+                    class="bar"></span>
+                <label class="label">Password</label>
+            </div>
+            <p th:each="error : ${#fields.errors('password')}"
+               th:text="${error}">Validation error</p>
+            <div class="group">
+                <input class="input" id="password2" required="required" type="password"/><span
+                    class="highlight"></span><span
+                    class="bar"></span>
+                <label class="label">Confirm Password</label>
+            </div>
+            <!--                <p th:each="error : ${#fields.errors('password2')}"-->
+            <!--                   th:text="${error}">Validation error</p>-->
+            <div class="btn-box">
+                <button class="btn btn-submit" type="submit">submit</button>
+            </div>
+        </form>
+    </div>
+</dev>
+
+
+<footer class="container borderradius10px" th:replace="/footer.html">
+    <span>©Unimak</span>
+</footer>
 
 </body>
 
