--- a/src/main/resources/templates/create-course.html
+++ b/src/main/resources/templates/create-course.html
@@ -34,7 +34,7 @@
 
     <div class="wrapper">
         <form class="form" method="POST" th:action="@{/course/create}" th:object="${course}">
-            <h1 class="formh1">Sign-Up As Teacher</h1>
+            <h1 class="formh1">Create Course</h1>
             <hr class="formhrsep"/>
             <div class="group">
                 <input class="input" id="title" required="required" th:field="*{title}" type="text"/><span
