--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -39,13 +39,14 @@
         <a class="marginleft10px" href="/admin/confirm-users">
             <button class="btn" type="submit">Confirm Users</button>
         </a>
-        <a class="marginleft10px" href="/admin/add-course">
+        <a class="marginleft10px" href="/course/create">
             <button class="btn" type="submit">Add Course</button>
         </a>
-        <a class="marginleft10px" href="/admin/show-all-courses">
+        <a class="marginleft10px" href="/course/list">
             <button class="btn" type="submit">Show All Courses</button>
         </a>
     </dev>
+
 </dev>
 <footer class="container borderradius10px">
     <label>©Unimak</label>
