--- a/src/main/resources/templates/signup-teacher.html
+++ b/src/main/resources/templates/signup-teacher.html
@@ -93,7 +93,7 @@
 </dev>
 
 
-<footer class="container borderradius10px" th:replace="/footer.html">
+<footer class="container borderradius10px">
     <span>©Unimak</span>
 </footer>
 
