--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -66,11 +66,24 @@
     top: 10px;
     transition: 300ms ease all;
 }
+
+.labelStatic {
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    transition: 300ms ease all;
+    top: -14px;
+    font-size: 12px;
+    color: #7115ad;
+}
+
 .bar {
     position: relative;
     display: block;
     width: 320px;
 }
+
 .bar:before {
     content: '';
     height: 2px;
