--- a/src/main/resources/static/css/ticketStyle.css
+++ b/src/main/resources/static/css/ticketStyle.css
@@ -9,11 +9,60 @@
     text-decoration: none;
 }
 
+.teacher {
+    width: 98.5%;
+    height: max-content;
+    background-color: rgba(226, 226, 226, 0.596);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: space-around;
+    /* cursor: pointer; */
+    text-decoration: none;
+}
+
+.course {
+    width: 98.5%;
+    height: 300px;
+    background-color: rgba(226, 226, 226, 0.596);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-direction: column;
+    align-items: center;
+    /*justify-content: space-between;*/
+    /*text-decoration: none;*/
+}
+
+.width25pc {
+    width: 23%;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.ticketPointer {
+    width: 98.5%;
+    height: max-content;
+    background-color: rgba(226, 226, 226, 0.596);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    cursor: pointer;
+    text-decoration: none;
+}
+
 .ticketFromTo {
     width: 30%;
     height: 105px;
     flex-direction: column;
     justify-content: space-around;
+    padding-left: 15px;
+}
+
+.courseInfo {
+    width: 30%;
+    height: 105px;
+    /*justify-content: space-around;*/
+    align-items: center;
     padding-left: 15px;
 }
 
@@ -27,6 +76,19 @@
     width: 30%;
     height: 95px;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 18pt;
+    font-weight: bold;
+}
+
+.courseDateTime {
+    padding-top: 10px;
+    padding-left: 17px;
+    width: 30%;
+    height: 95px;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     font-size: 18pt;
     font-weight: bold;
@@ -39,6 +101,14 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
+}
+
+.teachingDiv {
+    width: 30%;
+    height: 105px;
+    padding-right: 15px;
+] align-items: center;
+    justify-content: center;
 }
 
 .ticketPrice > div {
@@ -71,4 +141,8 @@ a:-webkit-any-link {
 
 .user {
     font-style: italic;
+}
+
+.hidden {
+    visibility: hidden;
 }
