--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -47,6 +47,12 @@
         </a>
     </dev>
 
+    <dev class="container" id="adminPanelDiv" sec:authorize="hasRole('teacher')">
+        <a class="marginleft10px" href="/teacher/course/list">
+            <button class="btn" type="submit">Show My Courses</button>
+        </a>
+    </dev>
+
 </dev>
 <footer class="container borderradius10px">
     <label>©Unimak</label>
