--- a/src/main/resources/templates/confirm-users.html
+++ b/src/main/resources/templates/confirm-users.html
@@ -105,7 +105,7 @@
     </div>
 </dev>
 <footer class="container borderradius10px">
-    <label>©Airpicket</label>
+    <label>©Unimak</label>
 </footer>
 
 </body>
