--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
     </div>
 </dev>
 <footer class="container borderradius10px">
-    <span>©Airpicket</span>
+    <span>©Unimak</span>
 </footer>
 
 </body>
