--- a/src/main/resources/templates/signup-student.html
+++ b/src/main/resources/templates/signup-student.html
@@ -92,7 +92,7 @@
 </dev>
 
 <footer class="container borderradius10px">
-    <!--    <span></span>-->
+    <span>©Unimak</span>
 </footer>
 
 </body>
