--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -41,7 +41,7 @@
 </dev>
 
 <footer class="container borderradius10px">
-    <span>©Airpicket</span>
+    <span>©Unimak</span>
 </footer>
 
 </body>
