--- a/src/main/resources/templates/create-course.html
+++ b/src/main/resources/templates/create-course.html
@@ -65,7 +65,7 @@
 </dev>
 
 <footer class="container borderradius10px">
-    <span>©Airpicket</span>
+    <span>©Unimak</span>
 </footer>
 
 </body>
