--- a/src/main/resources/templates/exam-questions.html
+++ b/src/main/resources/templates/exam-questions.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta th:content="${_csrf.token}" th:name="_csrf"/>
     <meta th:content="${_csrf.headerName}" th:name="_csrf_header"/>
-    <title>Course</title>
+    <title>Exam Questions</title>
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/css/input.css}"/>
     <link rel="stylesheet" th:href="@{/css/ticketStyle.css}"/>
@@ -43,7 +43,7 @@
 
 <dev class="container borderradius10px " id="mainDiv">
 
-    <h1 class="formh1" th:text="${course.getTitle()}">Course title</h1>
+    <h1 class="formh1" th:text="${exam.getTitle()}">Exam title</h1>
 
     <hr class="formhrsep">
     <br>
@@ -51,61 +51,67 @@
     <Div class="container course2 borderradius10px">
 
         <dev class="container courseDateTime">
-            <span th:text="${'starts on: '+course.getStartDate().toString().substring(0, 10)}">start date: 2000/2/20</span>
-            <span th:text="${'ends on: '+course.getEndDate().toString().substring(0, 10)}">ends date: 2000/2/20</span>
+            <span th:text="${'Duration: '+exam.getDuration()+' minutes'}">Duration: 20 minutes</span>
         </dev>
+        <dev class="container description" sec:authorize="hasRole('teacher')">
+            <span th:text="${exam.getDescription()}">bluh bluh...</span>
+        </dev>
+
         <dev class="container courseDateTime" sec:authorize="hasRole('teacher')">
-            <a class="marginleft10px" th:href="${'/course/add-exam?courseId='+course.getId()}">
-                <button class="btn" type="submit">Add Quiz</button>
+            <a class="marginleft10px" th:href="${'/exam/question-type?examId='+exam.getId()}">
+                <button class="btn" type="submit">Add Question</button>
             </a>
         </dev>
     </Div>
 </dev>
 
-<dev class="container borderradius10px" id="mainDiv" th:if="${exams.size()>0}">
+<dev class="container borderradius10px" id="mainDiv" th:if="${questions.size()>0}">
 
-    <h1 class="formh1">Quiz List</h1>
+    <h1 class="formh1">Question List</h1>
 
     <hr class="formhrsep">
 
     <div class="container ticketA borderradius10px">
         <div class="container width25pc">
-            <span class="fromTo">id</span>
+            <span class="fromTo">ID</span>
         </div>
         <div class="container width25pc">
-            <span class="fromTo">title</span>
+            <span class="fromTo">Title</span>
         </div>
         <div class="container width25pc">
-            <span class="fromTo">duration</span>
+            <span class="fromTo">Question Type</span>
         </div>
+        <!--        <div class="container width25pc">-->
+        <!--            <span class="fromTo">Question</span>-->
+        <!--        </div>-->
 
         <div class="container width25pc">
             &nbsp;
         </div>
     </div>
 
-    <div class="container ticketA borderradius10px" th:each="exam: ${exams}"
-         th:id="${'exam'+ exam.getId()}">
+    <div class="container ticketA borderradius10px" th:each="question: ${questions}"
+         th:id="${'question'+ question.getId()}">
         <div class="container width25pc">
-            <span class="fromTo" th:text="${exam.getId()}">id</span>
+            <span class="fromTo" th:text="${question.getId()}">id</span>
         </div>
         <div class="container width25pc">
-            <span class="fromTo" th:text="${exam.getTitle()}">title</span>
+            <span class="fromTo" th:text="${question.getTitle()}">title</span>
         </div>
         <div class="container width25pc">
-            <span class="fromTo" th:text="${exam.getDuration()}">duration</span>
+            <span class="fromTo" th:text="${question.getQuestionType()}">question Type</span>
         </div>
-        <div class="container width25pc">
-            <a class="marginright10px" th:href="${'/exam/questions?examId='+ exam.getId()}">
-                <button class="btn btn-submit" type="submit">Questions</button>
-            </a>
+        <!--        <div class="container width25pc">-->
+        <!--            <span class="fromTo" th:text="${question.getQuestion()}">question</span>-->
+        <!--        </div>-->
 
-            <a class="marginright10px" th:href="${'/exam?id='+ exam.getId()}">
-                <button class="btn btn-submit" type="submit">Edit</button>
-            </a>
+        <div class="container width25pc">
+            <!--            <a class="marginright10px" th:href="${'/question?id='+ question.getId()}">-->
+            <!--                <button class="btn btn-submit" type="submit">Edit</button>-->
+            <!--            </a>-->
 
-            <input class="btn btn-submit" name="trashcan" th:id="${exam.getId()}"
-                   type="button" value="delete">
+            <input class="btn btn-submit" name="trashcan" th:id="${question.getId()}"
+                   type="button" value="remove">
 
         </div>
 
