--- a/src/main/resources/templates/exam-questions.html
+++ b/src/main/resources/templates/exam-questions.html
@@ -53,6 +53,9 @@
         <dev class="container courseDateTime">
             <span th:text="${'Duration: '+exam.getDuration()+' minutes'}">Duration: 20 minutes</span>
         </dev>
+        <dev class="container courseDateTime">
+            <span id="examScore" th:text="${'Exam Score: '+examScore}">exam Score: 22</span>
+        </dev>
         <dev class="container description" sec:authorize="hasRole('teacher')">
             <span th:text="${exam.getDescription()}">bluh bluh...</span>
         </dev>
@@ -83,6 +86,9 @@
         <div class="container width25pc">
             <span class="fromTo">Question Type</span>
         </div>
+        <div class="container width25pc">
+            <span class="fromTo">score</span>
+        </div>
         <!--        <div class="container width25pc">-->
         <!--            <span class="fromTo">Question</span>-->
         <!--        </div>-->
@@ -102,6 +108,9 @@
         </div>
         <div class="container width25pc">
             <span class="fromTo" th:text="${question.getQuestion().getQuestionType()}">question Type</span>
+        </div>
+        <div class="container width25pc">
+            <span class="fromTo" th:id="${'score'+question.getId()}" th:text="${question.getScore()}">score</span>
         </div>
         <!--        <div class="container width25pc">-->
         <!--            <span class="fromTo" th:text="${question.getQuestion()}">question</span>-->
