add "adding choice to multi answer question creation page" js service

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -80,6 +80,10 @@ footer label {
     margin-right: 10px;
 }
 
+.margintop10px {
+    margin-top: 10px;
+}
+
 .SuccessfulSignUp {
     font-size: 20px;
     font-weight: bold;
