--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -155,3 +155,14 @@
     color: red;
     text-align: center;
 }
+
+.choiceGroup {
+    /*position: relative;*/
+    /*margin: 45px 0;*/
+    flex-direction: column;
+    /*left: -10px;*/
+}
+
+.choiceRadio {
+    margin-top: 20px;
+}
